added few functionalities: On user click, bee now jumps up (like flappy bird) then hovers down at constant speed after a certain terminal velocity. Bee will also eat pollen (deletes DOM elements of pollen when it collides. Added to comments some suggested extensions that can make this a helpful extension rather than just a fun one (save link to a list, like bookmarks)

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "ChromeFish",
+  "name": "ChromeBee",
   "version": "1.0",
-  "description": "Make chrome a fishbowl and feed your fish some links",
+  "description": "Hover on links to shake pollen off the flower",
   "content_scripts": [
     {
-     // "matches": ["https://www.wikipedia.org/*"],
       "matches": ["<all_urls>"],
       "js": ["./lib/p5.js","./main.js","./sketch.js"],
       "css": ["./style.css"]
     }
-  ]
-  // "action": {
+  ],
+  "action": {
   //   "default_title": "Title",
-  //   "default_icon": {
-  //     "64": "64.png"
-  //   }
+    "default_icon": "assets/64x.png"
   // }
+}
 }
